Fechas JqueryUi listas en index1

--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -194,8 +194,9 @@
 
                     e.preventDefault();
 
-                    var fechI = this['fech_ini'].value;
-                    var fechF = this['fech_fin'].value;
+                    var fechI = this['altfech_ini'].value;                    
+                    var fechF = this['altfech_fin'].value;
+                    
 
                     /*Regla 1 para la validadcion de al menos un campo*/
                     if (fechI == '' && fechF == '' && $("#idCategoria").val() == '' &&
@@ -220,8 +221,8 @@
 
 
                         if (new Date(fechF.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1")) < new Date(fechI.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1"))) {
-
-                            $("#alerta").append('<strong>Fecha hasta no puede ser menor que fecha desde</strong>').show();
+                            $("#alerta").empty();
+                            $("#alerta").append('<strong>"Fecha desde" no puede ser posterior a "Fecha hasta"</strong>').show();
                             return;
                         } else {
                             var valor = $("#alerta").children('strong');
