--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisCompras.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisCompras.cshtml
@@ -18,7 +18,9 @@
     }
 
 }
-
+<style>
+    td,th{text-align:center}
+</style>
 <div class="container-fluid">
     <div class="col-md-4">
         <ol class="breadcrumb">
