--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -123,7 +123,7 @@
                 @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-3" })
                 <label class="control-label col-md-1">*</label>
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = " form-control fecha2" ,type="text"} })
                     @Html.ValidationMessageFor(model => model.fechaNac)
                 </div>
             </div>
@@ -170,7 +170,7 @@
 
         </div>
     </div>
-
+    <br />
 }
 
 
