--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ModificarDatos.cshtml
@@ -60,7 +60,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-3" })
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control fecha2" , type="text"} })
                     @Html.ValidationMessageFor(model => model.fechaNac)
                 </div>
             </div>
