--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -192,7 +192,7 @@ else
                 text-align: center;
             }
         </style>
-        <!--img src="~/Content/fondo1.jpg" alt="Alternate Text" class="bg" /-->
+        
         <header class="container-fluid ">
             <nav style="margin-bottom:0" class="navbar navbar-static-top navbar-inverse " role="navigation">
                 <div class="container-fluid">
@@ -206,7 +206,7 @@ else
                         <a href="@Url.Action("Index", "Home")" class="navbar-brand">TICKNET </a><!--nos redirige a la pag principal-->
                     </div>
                     <!--inicia el MENU-->
-                    <div-- class="collapse navbar-collapse" id="navegacion">
+                    <div class="collapse navbar-collapse" id="navegacion">
                         <!--menu desplegable -->
                         @using (Html.BeginForm("Index", "Home", FormMethod.Get, new { id = "search", @class = "navbar-form navbar-left", role = "search" }))
                         {
@@ -232,8 +232,7 @@ else
                                 {
                                     @Html.AntiForgeryToken()
 
-                                    <div class="nav navbar-nav ">
-                                        <!--a type="button" class="btn btn-primary" href="@Url.Action("MiCuenta","CuentaUsuario")"><span class="fa fa-user"></span> @nombre</a-->
+                                    <div class="nav navbar-nav ">                                        
                                         <div class="dropdown">
                                             <a type="button" aria-expanded="true" data-toggle="dropdown" aria-haspopup="true" class="btn btn-primary dropdown-toggle">@nombre <span class="caret"></span></a>
                                             <ul class="dropdown-menu" aria-labelledby="sesion">
@@ -245,7 +244,7 @@ else
                                 }
                             }
                         </div>
-                </div>
+                    </div>
                 </div>
             </nav>
 
