--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -573,8 +573,8 @@
                 e.preventDefault();
 
 
-                var fechI = this['fech_ini'].value;
-                var fechF = this['fech_fin'].value;
+                var fechI = this['altfech_ini'].value;
+                var fechF = this['altfech_fin'].value;
 
                 /*Regla 1 para la validadcion de al menos un campo*/
                 if (fechI == '' && fechF == '' && $("#idCategoria").val() == '' &&
