--- a/WebApplication4/WebApplication4/Views/Ventas/GeneraTicket.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/GeneraTicket.cshtml
@@ -69,7 +69,7 @@
             </div>
             <br><br><br><br>
             <div align="center">
-                <h3>@Model.Evento</h3>
+                <h4>@Model.Evento</h4>
                 <!--<p>Descripcion</p>-->
 
                 <p>@Model.Local</p>
@@ -150,6 +150,7 @@
 
     #header p {
         margin: 0;
+        font-size: 13px;
     }
 
     #ticket {
@@ -213,3 +214,4 @@
         border-left: 1px dashed black;
     }
 </style>
+ 
