--- a/WebApplication4/WebApplication4/Views/Ventas/PrintTicket.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/PrintTicket.cshtml
@@ -59,9 +59,9 @@
 <script>
 
     $(document).ready(function () {
-
+        /*
         window.print();
-        window.close();
+        window.close();*/
 
     })
 
