--- a/WebApplication4/WebApplication4/Views/Politicas/Politicas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Politicas/Politicas.cshtml
@@ -66,7 +66,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="radio col-md-4 col-md-offset-1 col-sm-4 col-xs-4">
-                            <label><input type="radio" name="tipoRes" value="2">Hora límite de reserva: </label>
+                            <label><input type="radio" name="tipoRes" value="2">Hora de Cancelación de Reserva: </label>
                         </div>
                         <div class="col-md-2 col-sm-4 col-xs-4">
                             <div class="input-group">
